crates/aranya-policy-compiler/tests/data/global_let/envelope_invalid_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
1 | let x = envelope::author_id(envelope)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This expression is not valid in a const context
